--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2023 Git.Training
 -->
 <head>
-	<title>An Example Website</title>
+	<title>A very Respectfull Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,11 +17,12 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			I'm not what will go here, but I'm sure
+			it will be nice.
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; csoza 2023</p>
 	</footer>
 </body>
 </html>
