mb before rebase conflicts

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2023 Git.Training
+	Adding changes rebasing conflicts
 -->
 <head>
 	<title>A very Respectfull Website</title>
