--- a/simple.html
+++ b/simple.html
@@ -21,6 +21,7 @@
 		</p>
 	</main>
 	<footer class="container">
+		<p>&copy; Carlos Soza 2023. All rights reserved.</p>
 	</footer>
 </body>
 </html>
